[package]
name = "prost-types"
readme = "README.md"
description = "Prost definitions of Protocol Buffers well known types."
publish = ["sb-crate-registry"]
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
default = ["std"]
std = ["prost/std"]

[dependencies]
prost = { version = "0.13.7", path = "../prost", default-features = false, features = ["prost-derive"], registry = "sb-crate-registry" }

[dev-dependencies]
proptest = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
